--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,9 @@
       <meta name="description" content="{{ page.meta_description }}">
     {% endif %}
   {% endif %}
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="icon" href="/assets/img/favicon.png" sizes="32x32" type="image/png">
+  <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="assets/img/favicon.png" sizes="32x32" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdn.plyr.io/3.6.3/plyr.css" />
